added div tags with intro class for styling
co author brandonf55 <brandon.fenk99@gmail.com>

--- a/borning-lecture.html
+++ b/borning-lecture.html
@@ -5,15 +5,16 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h2 class="intro">This is borning</h2>
-  <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis eu massa at facilisis. Nullam vehicula fermentum neque eget aliquam. Nam enim purus, volutpat ac finibus at, lacinia eget sapien. Curabitur ut mas
+  <div class="intro">
+    <h2>This is borning</h2>
+    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis eu massa at facilisis. Nullam vehicula fermentum neque eget aliquam. Nam enim purus, volutpat ac finibus at, lacinia eget sapien. Curabitur ut mas
     sa pretium, tempor metus vitae, imperdiet nisl.</p>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa placeat eum fuga quaerat rem, quidem mollitia aut voluptatem saepe, 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa placeat eum fuga quaerat rem, quidem mollitia aut voluptatem saepe, 
     qui sequi nemo omnis officia nam quam harum porro velit facere!</p>
-<img class="intro" src="https://inventwithpython.com/images/cover_bigbookpython_thumb.jpg" alt="Here is a picture of a book.">
+    <img src="https://inventwithpython.com/images/cover_bigbookpython_thumb.jpg" alt="Here is a picture of a book.">
 
-
+  </div>
 </body>
 
 </html>
